[project]
name = "enochecker-logs"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = []

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["enochecker_logs"]
exclude = []

[project.scripts]
"enochecker_logs" = "enochecker_logs.main:main"
